choreonoid (1.1.0+dfsg-2) unstable; urgency=low

  * Fix section. Initial upload was put in contrib/ by mistake.
  * Update symbols using pkgkde-getbuildlogs and pkgkde-symbolshelper.
  * Install pkg-config files in lib/arch (Closes: #708964).

 -- Thomas Moulard <thomas.moulard@gmail.com>  Mon, 20 May 2013 12:52:05 +0900

choreonoid (1.1.0+dfsg-1) unstable; urgency=low

  * Add man page for choreonoid binary.
  * Add desktop entry for choreonoid binary.
  * Add lintian override file for choreonoid package.
  * Import new upstream version 1.1.0 (closes: #695190).

 -- Thomas Moulard <thomas.moulard@gmail.com>  Tue, 20 Nov 2012 15:21:16 +0900