@@ -1,3 +1,3 @@
 ?package(choreonoid):needs="X11"\
         section="Applications/Science/Engineering"\
-        title="Choreonoid" command="choreonoid"
+        title="Choreonoid" command="/usr/bin/choreonoid"
