@@ -36,6 +36,22 @@ override_dh_auto_build:
 	dh_auto_build -- # Compile the software.
 	doxygen Doxyfile # Generate documentation.
 
+override_dh_auto_install:
+	dh_auto_install -- # Install files in prefix.
+	# Install desktop file
+	mkdir -p debian/choreonoid/usr/share/applications/
+	install -m 644 ./debian/choreonoid.desktop \
+	 debian/choreonoid/usr/share/applications/
+	# Install icons.
+	mkdir -p debian/choreonoid/usr/share/icons/hicolor/scalable/apps/
+	install -m 644 ./src/Choreonoid/icon/choreonoid.svg \
+	 debian/choreonoid/usr/share/icons/hicolor/scalable/apps/choreonoid.svg
+	for s in 16 24 32 48 64 256; do \
+	 mkdir -p "debian/choreonoid/usr/share/icons/hicolor/$$s""x$$s/apps/"; \
+	 install -m 644 "./src/Choreonoid/icon/choreonoid$$s.png" \
+	  "debian/choreonoid/usr/share/icons/hicolor/$$s""x$$s/apps/choreonoid.png"; \
+	done
+
 override_dh_strip:
 	dh_strip -a --dbg-package=choreonoid-dbg
 
